Fixed some PMD issues (#4)
* Fixed some PMD issues

* Fixed varargs checks

* Fixed test data

* Utilize getFirst

* Fixed array copy

* Fixed test data

* Removed unnecessary throws

* Renamed argument

* Removed redundant annotations

* Moved constant